Move formatters out of the CLI and into their own packages

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -33,6 +33,9 @@
     { "path": "alfa-equatable" },
     { "path": "alfa-fnv" },
     { "path": "alfa-foldable" },
+    { "path": "alfa-formatter" },
+    { "path": "alfa-formatter-earl" },
+    { "path": "alfa-formatter-json" },
     { "path": "alfa-functor" },
     { "path": "alfa-future" },
     { "path": "alfa-generator" },
