--- a/packages/alfa-cli/tsconfig.json
+++ b/packages/alfa-cli/tsconfig.json
@@ -1,16 +1,10 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "types": ["node"]
-  },
   "files": [
     "bin/alfa.ts",
     "bin/alfa/commands/audit.ts",
     "bin/alfa/commands/scrape.ts",
-    "src/formatter.ts",
-    "src/formatter/earl.ts",
-    "src/formatter/json.ts",
     "src/index.ts",
     "src/oracle.ts"
   ],
@@ -22,7 +16,13 @@
       "path": "../alfa-device"
     },
     {
-      "path": "../alfa-json-ld"
+      "path": "../alfa-formatter"
+    },
+    {
+      "path": "../alfa-formatter-earl"
+    },
+    {
+      "path": "../alfa-formatter-json"
     },
     {
       "path": "../alfa-rules"
