--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -36,6 +36,7 @@
     { "path": "alfa-formatter" },
     { "path": "alfa-formatter-earl" },
     { "path": "alfa-formatter-json" },
+    { "path": "alfa-formatter-sarif" },
     { "path": "alfa-functor" },
     { "path": "alfa-future" },
     { "path": "alfa-generator" },
