Use new `Diagnostic` class throughout rules

--- a/packages/alfa-act/tsconfig.json
+++ b/packages/alfa-act/tsconfig.json
@@ -4,6 +4,7 @@
   "files": [
     "src/audit.ts",
     "src/cache.ts",
+    "src/diagnostic.ts",
     "src/index.ts",
     "src/interview.ts",
     "src/oracle.ts",
