--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -68,6 +68,12 @@
     },
     {
       "path": "../alfa-sequence"
+    },
+    {
+      "path": "../alfa-slice"
+    },
+    {
+      "path": "../alfa-test"
     }
   ]
 }
