--- a/packages/alfa-either/tsconfig.json
+++ b/packages/alfa-either/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "../alfa-functor"
     },
     {
+      "path": "../alfa-json"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
