--- a/packages/alfa-http/package.json
+++ b/packages/alfa-http/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@siteimprove/alfa-earl": "^0.2.0",
     "@siteimprove/alfa-encoding": "^0.2.0",
+    "@siteimprove/alfa-equatable": "^0.2.0",
+    "@siteimprove/alfa-iterable": "^0.2.0",
     "@siteimprove/alfa-json": "^0.2.0",
     "@siteimprove/alfa-map": "^0.2.0",
     "@siteimprove/alfa-option": "^0.2.0",
