--- a/packages/alfa-table/tsconfig.json
+++ b/packages/alfa-table/tsconfig.json
@@ -52,6 +52,12 @@
       "path": "../alfa-predicate"
     },
     {
+      "path": "../alfa-result"
+    },
+    {
+      "path": "../alfa-sequence"
+    },
+    {
       "path": "../alfa-set"
     }
   ]
