--- a/packages/alfa-vue/package.json
+++ b/packages/alfa-vue/package.json
@@ -24,10 +24,14 @@
     "@siteimprove/alfa-cheerio": "^0.2.0",
     "@siteimprove/alfa-device": "^0.2.0",
     "@siteimprove/alfa-dom": "^0.2.0",
+    "@siteimprove/alfa-future": "^0.2.0",
     "@siteimprove/alfa-http": "^0.2.0",
     "@siteimprove/alfa-jasmine": "^0.2.0",
     "@siteimprove/alfa-jest": "^0.2.0",
+    "@siteimprove/alfa-option": "^0.2.0",
+    "@siteimprove/alfa-predicate": "^0.2.0",
     "@siteimprove/alfa-unexpected": "^0.2.0",
+    "@siteimprove/alfa-web": "^0.2.0",
     "@vue/test-utils": "^1.0.0-beta.29",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
