--- a/packages/alfa-act/package.json
+++ b/packages/alfa-act/package.json
@@ -31,6 +31,7 @@
     "@siteimprove/alfa-record": "^0.2.0",
     "@siteimprove/alfa-result": "^0.2.0",
     "@siteimprove/alfa-sequence": "^0.2.0",
+    "@siteimprove/alfa-thunk": "^0.2.0",
     "@siteimprove/alfa-trilean": "^0.2.0"
   },
   "devDependencies": {
