--- a/packages/alfa-act/tsconfig.json
+++ b/packages/alfa-act/tsconfig.json
@@ -56,6 +56,9 @@
       "path": "../alfa-test"
     },
     {
+      "path": "../alfa-thunk"
+    },
+    {
       "path": "../alfa-trilean"
     }
   ]
