--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -32,6 +32,7 @@
     "@siteimprove/alfa-option": "^0.2.0",
     "@siteimprove/alfa-predicate": "^0.2.0",
     "@siteimprove/alfa-sequence": "^0.2.0",
+    "@siteimprove/alfa-set": "^0.2.0",
     "@siteimprove/alfa-style": "^0.2.0",
     "@siteimprove/alfa-table": "^0.2.0"
   },
