--- a/packages/alfa-assert/package.json
+++ b/packages/alfa-assert/package.json
@@ -20,9 +20,10 @@
   "dependencies": {
     "@siteimprove/alfa-act": "^0.2.0",
     "@siteimprove/alfa-dom": "^0.2.0",
+    "@siteimprove/alfa-equatable": "^0.2.0",
     "@siteimprove/alfa-future": "^0.2.0",
-    "@siteimprove/alfa-highlight": "^0.2.0",
     "@siteimprove/alfa-iterable": "^0.2.0",
+    "@siteimprove/alfa-json": "^0.2.0",
     "@siteimprove/alfa-list": "^0.2.0",
     "@siteimprove/alfa-option": "^0.2.0",
     "@siteimprove/alfa-rules": "^0.2.0",
