--- a/packages/alfa-chai/package.json
+++ b/packages/alfa-chai/package.json
@@ -24,6 +24,8 @@
     "@siteimprove/alfa-dom": "^0.2.0",
     "@siteimprove/alfa-future": "^0.2.0",
     "@siteimprove/alfa-iterable": "^0.2.0",
+    "@siteimprove/alfa-mapper": "^0.2.0",
+    "@siteimprove/alfa-predicate": "^0.2.0",
     "@siteimprove/alfa-web": "^0.2.0",
     "@types/chai": "^4.1.7",
     "chai": "^4.2.0"
