--- a/packages/alfa-chai/tsconfig.json
+++ b/packages/alfa-chai/tsconfig.json
@@ -16,6 +16,12 @@
       "path": "../alfa-iterable"
     },
     {
+      "path": "../alfa-mapper"
+    },
+    {
+      "path": "../alfa-predicate"
+    },
+    {
       "path": "../alfa-test"
     },
     {
