--- a/packages/alfa-css/package.json
+++ b/packages/alfa-css/package.json
@@ -22,6 +22,7 @@
     "@siteimprove/alfa-equatable": "^0.2.0",
     "@siteimprove/alfa-hash": "^0.2.0",
     "@siteimprove/alfa-iterable": "^0.2.0",
+    "@siteimprove/alfa-json": "^0.2.0",
     "@siteimprove/alfa-math": "^0.2.0",
     "@siteimprove/alfa-option": "^0.2.0",
     "@siteimprove/alfa-parser": "^0.2.0",
