--- a/packages/alfa-cypress/package.json
+++ b/packages/alfa-cypress/package.json
@@ -24,8 +24,10 @@
     "@siteimprove/alfa-chai": "^0.2.0",
     "@siteimprove/alfa-device": "^0.2.0",
     "@siteimprove/alfa-dom": "^0.2.0",
+    "@siteimprove/alfa-future": "^0.2.0",
     "@siteimprove/alfa-http": "^0.2.0",
     "@siteimprove/alfa-jquery": "^0.2.0",
+    "@siteimprove/alfa-option": "^0.2.0",
     "@siteimprove/alfa-web": "^0.2.0",
     "cypress": "^3.3.1"
   },
