--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -29,7 +29,8 @@
     "@siteimprove/alfa-mapper": "^0.2.0",
     "@siteimprove/alfa-option": "^0.2.0",
     "@siteimprove/alfa-predicate": "^0.2.0",
-    "@siteimprove/alfa-sequence": "^0.2.0"
+    "@siteimprove/alfa-sequence": "^0.2.0",
+    "@siteimprove/alfa-slice": "^0.2.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.2.0"
