--- a/packages/alfa-either/package.json
+++ b/packages/alfa-either/package.json
@@ -21,6 +21,7 @@
     "@siteimprove/alfa-equatable": "^0.2.0",
     "@siteimprove/alfa-foldable": "^0.2.0",
     "@siteimprove/alfa-functor": "^0.2.0",
+    "@siteimprove/alfa-json": "^0.2.0",
     "@siteimprove/alfa-mapper": "^0.2.0",
     "@siteimprove/alfa-monad": "^0.2.0",
     "@siteimprove/alfa-option": "^0.2.0",
