--- a/packages/alfa-enzyme/package.json
+++ b/packages/alfa-enzyme/package.json
@@ -23,10 +23,12 @@
     "@siteimprove/alfa-chai": "^0.2.0",
     "@siteimprove/alfa-cheerio": "^0.2.0",
     "@siteimprove/alfa-dom": "^0.2.0",
+    "@siteimprove/alfa-future": "^0.2.0",
     "@siteimprove/alfa-jasmine": "^0.2.0",
     "@siteimprove/alfa-jest": "^0.2.0",
     "@siteimprove/alfa-react": "^0.2.0",
     "@siteimprove/alfa-unexpected": "^0.2.0",
+    "@siteimprove/alfa-web": "^0.2.0",
     "@types/enzyme": "^3.1.18",
     "@types/react": "^16.8.4",
     "enzyme": "^3.7.0",
