--- a/packages/alfa-jasmine/package.json
+++ b/packages/alfa-jasmine/package.json
@@ -21,7 +21,9 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.2.0",
-    "@siteimprove/alfa-dom": "^0.2.0",
+    "@siteimprove/alfa-mapper": "^0.2.0",
+    "@siteimprove/alfa-predicate": "^0.2.0",
+    "@siteimprove/alfa-web": "^0.2.0",
     "@types/jasmine": "^3.3.12",
     "jasmine": "^3.4.0"
   },
