--- a/packages/alfa-jest/package.json
+++ b/packages/alfa-jest/package.json
@@ -21,7 +21,11 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.2.0",
-    "@siteimprove/alfa-dom": "^0.2.0",
+    "@siteimprove/alfa-highlight": "^0.2.0",
+    "@siteimprove/alfa-mapper": "^0.2.0",
+    "@siteimprove/alfa-predicate": "^0.2.0",
+    "@siteimprove/alfa-sequence": "^0.2.0",
+    "@siteimprove/alfa-web": "^0.2.0",
     "@types/jest": "^24.0.6",
     "jest": "^24.1.0"
   },
