--- a/packages/alfa-react/package.json
+++ b/packages/alfa-react/package.json
@@ -23,6 +23,7 @@
     "@siteimprove/alfa-chai": "^0.2.0",
     "@siteimprove/alfa-device": "^0.2.0",
     "@siteimprove/alfa-dom": "^0.2.0",
+    "@siteimprove/alfa-future": "^0.2.0",
     "@siteimprove/alfa-http": "^0.2.0",
     "@siteimprove/alfa-jasmine": "^0.2.0",
     "@siteimprove/alfa-jest": "^0.2.0",
