--- a/packages/alfa-rules/package.json
+++ b/packages/alfa-rules/package.json
@@ -22,13 +22,18 @@
     "@siteimprove/alfa-affine": "^0.2.0",
     "@siteimprove/alfa-aria": "^0.2.0",
     "@siteimprove/alfa-branched": "^0.2.0",
+    "@siteimprove/alfa-cache": "^0.2.0",
     "@siteimprove/alfa-compatibility": "^0.2.0",
     "@siteimprove/alfa-css": "^0.2.0",
     "@siteimprove/alfa-device": "^0.2.0",
     "@siteimprove/alfa-dom": "^0.2.0",
+    "@siteimprove/alfa-equatable": "^0.2.0",
     "@siteimprove/alfa-future": "^0.2.0",
+    "@siteimprove/alfa-http": "^0.2.0",
     "@siteimprove/alfa-iana": "^0.2.0",
     "@siteimprove/alfa-iterable": "^0.2.0",
+    "@siteimprove/alfa-json": "^0.2.0",
+    "@siteimprove/alfa-list": "^0.2.0",
     "@siteimprove/alfa-map": "^0.2.0",
     "@siteimprove/alfa-math": "^0.2.0",
     "@siteimprove/alfa-media": "^0.2.0",
@@ -36,8 +41,11 @@
     "@siteimprove/alfa-predicate": "^0.2.0",
     "@siteimprove/alfa-record": "^0.2.0",
     "@siteimprove/alfa-result": "^0.2.0",
+    "@siteimprove/alfa-sequence": "^0.2.0",
+    "@siteimprove/alfa-set": "^0.2.0",
     "@siteimprove/alfa-style": "^0.2.0",
     "@siteimprove/alfa-table": "^0.2.0",
+    "@siteimprove/alfa-thunk": "^0.2.0",
     "@siteimprove/alfa-trilean": "^0.2.0",
     "@siteimprove/alfa-web": "^0.2.0"
   },
