--- a/packages/alfa-scraper/package.json
+++ b/packages/alfa-scraper/package.json
@@ -25,6 +25,7 @@
     "@siteimprove/alfa-http": "^0.2.0",
     "@siteimprove/alfa-json": "^0.2.0",
     "@siteimprove/alfa-puppeteer": "^0.2.0",
+    "@siteimprove/alfa-result": "^0.2.0",
     "@siteimprove/alfa-time": "^0.2.0",
     "@siteimprove/alfa-web": "^0.2.0",
     "@types/puppeteer": "^2.0.1",
