--- a/packages/alfa-scraper/tsconfig.json
+++ b/packages/alfa-scraper/tsconfig.json
@@ -31,6 +31,9 @@
       "path": "../alfa-puppeteer"
     },
     {
+      "path": "../alfa-result"
+    },
+    {
       "path": "../alfa-test"
     },
     {
