--- a/packages/alfa-table/package.json
+++ b/packages/alfa-table/package.json
@@ -25,8 +25,11 @@
     "@siteimprove/alfa-iterable": "^0.2.0",
     "@siteimprove/alfa-json": "^0.2.0",
     "@siteimprove/alfa-list": "^0.2.0",
+    "@siteimprove/alfa-math": "^0.2.0",
     "@siteimprove/alfa-option": "^0.2.0",
     "@siteimprove/alfa-predicate": "^0.2.0",
+    "@siteimprove/alfa-result": "^0.2.0",
+    "@siteimprove/alfa-sequence": "^0.2.0",
     "@siteimprove/alfa-set": "^0.2.0"
   },
   "devDependencies": {
