--- a/packages/alfa-trilean/package.json
+++ b/packages/alfa-trilean/package.json
@@ -19,6 +19,7 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-equatable": "^0.2.0",
+    "@siteimprove/alfa-iterable": "^0.2.0",
     "@siteimprove/alfa-mapper": "^0.2.0"
   },
   "devDependencies": {
