--- a/packages/alfa-trilean/tsconfig.json
+++ b/packages/alfa-trilean/tsconfig.json
@@ -14,6 +14,9 @@
       "path": "../alfa-equatable"
     },
     {
+      "path": "../alfa-iterable"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
