--- a/packages/alfa-unexpected/package.json
+++ b/packages/alfa-unexpected/package.json
@@ -22,8 +22,9 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.2.0",
-    "@siteimprove/alfa-dom": "^0.2.0",
-    "@siteimprove/alfa-highlight": "^0.2.0",
+    "@siteimprove/alfa-mapper": "^0.2.0",
+    "@siteimprove/alfa-predicate": "^0.2.0",
+    "@siteimprove/alfa-web": "^0.2.0",
     "unexpected": "^11.2.0"
   },
   "devDependencies": {
