Update workflow definitions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-      - run: yarn install --frozen-lockfile --ignore-platform
+      - run: yarn install --immutable
       - run: yarn build
       - run: yarn test
       - run: yarn lerna publish --yes from-package
