--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -17,8 +17,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - uses: actions/cache@v1
         with:
-          path: .cache/yarn
+          path: .yarn/cache
           key: yarn-${{ hashFiles('yarn.lock') }}
-      - run: yarn install --frozen-lockfile --ignore-platform --cache-folder .cache/yarn
+      - run: yarn install --immutable
       - run: yarn build
       - run: yarn test
