Add missing reference

--- a/packages/alfa-jest/tsconfig.json
+++ b/packages/alfa-jest/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "../alfa-mapper"
     },
     {
+      "path": "../alfa-option"
+    },
+    {
       "path": "../alfa-predicate"
     },
     {
