--- a/packages/alfa-jest/package.json
+++ b/packages/alfa-jest/package.json
@@ -23,6 +23,7 @@
     "@siteimprove/alfa-assert": "^0.2.0",
     "@siteimprove/alfa-highlight": "^0.2.0",
     "@siteimprove/alfa-mapper": "^0.2.0",
+    "@siteimprove/alfa-option": "^0.2.0",
     "@siteimprove/alfa-predicate": "^0.2.0",
     "@siteimprove/alfa-sequence": "^0.2.0",
     "@siteimprove/alfa-web": "^0.2.0",
