Add scripting and user preferences as `Device` parameters

--- a/packages/alfa-device/tsconfig.json
+++ b/packages/alfa-device/tsconfig.json
@@ -5,6 +5,8 @@
     "src/device.ts",
     "src/display.ts",
     "src/index.ts",
+    "src/preference.ts",
+    "src/scripting.ts",
     "src/viewport.ts"
   ],
   "references": [
@@ -15,7 +17,13 @@
       "path": "../alfa-hash"
     },
     {
+      "path": "../alfa-iterable"
+    },
+    {
       "path": "../alfa-json"
+    },
+    {
+      "path": "../alfa-map"
     },
     {
       "path": "../alfa-test"
