--- a/packages/alfa-device/package.json
+++ b/packages/alfa-device/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "@siteimprove/alfa-equatable": "^0.2.0",
     "@siteimprove/alfa-hash": "^0.2.0",
-    "@siteimprove/alfa-json": "^0.2.0"
+    "@siteimprove/alfa-iterable": "^0.2.0",
+    "@siteimprove/alfa-json": "^0.2.0",
+    "@siteimprove/alfa-map": "^0.2.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.2.0"
