Add tests for SIA R67

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -125,6 +125,7 @@
     "test/sia-r57/rule.spec.tsx",
     "test/sia-r64/rule.spec.tsx",
     "test/sia-r61/rule.spec.tsx",
+    "test/sia-r67/rule.spec.tsx",
     "test/sia-r68/rule.spec.tsx",
     "test/sia-r69/rule.spec.tsx",
     "test/sia-r71/rule.spec.tsx",
