Progress on CLI rewrite

--- a/packages/alfa-cli/tsconfig.json
+++ b/packages/alfa-cli/tsconfig.json
@@ -1,12 +1,28 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "resolveJsonModule": true
+  },
   "files": [
+    "package.json",
     "bin/alfa.ts",
-    "bin/alfa/commands/audit.ts",
-    "bin/alfa/commands/scrape.ts",
+    "bin/alfa/command/audit.ts",
+    "bin/alfa/command/audit/arguments.ts",
+    "bin/alfa/command/audit/flags.ts",
+    "bin/alfa/command/audit/run.ts",
+    "bin/alfa/command/scrape.ts",
+    "bin/alfa/command/scrape/arguments.ts",
+    "bin/alfa/command/scrape/flags.ts",
+    "bin/alfa/command/scrape/run.ts",
+    "bin/alfa/oracle.ts",
+    "src/application.ts",
+    "src/argument.ts",
+    "src/command.ts",
+    "src/flag.ts",
     "src/index.ts",
-    "src/oracle.ts"
+    "src/text.ts",
+    "test/text.spec.ts"
   ],
   "references": [
     {
@@ -22,6 +38,9 @@
       "path": "../alfa-dom"
     },
     {
+      "path": "../alfa-equatable"
+    },
+    {
       "path": "../alfa-formatter"
     },
     {
@@ -31,7 +50,13 @@
       "path": "../alfa-formatter-json"
     },
     {
+      "path": "../alfa-functor"
+    },
+    {
       "path": "../alfa-future"
+    },
+    {
+      "path": "../alfa-highlight"
     },
     {
       "path": "../alfa-http"
@@ -40,7 +65,22 @@
       "path": "../alfa-iterable"
     },
     {
+      "path": "../alfa-json"
+    },
+    {
+      "path": "../alfa-mapper"
+    },
+    {
       "path": "../alfa-option"
+    },
+    {
+      "path": "../alfa-parser"
+    },
+    {
+      "path": "../alfa-record"
+    },
+    {
+      "path": "../alfa-result"
     },
     {
       "path": "../alfa-rules"
