--- a/packages/alfa-cli/package.json
+++ b/packages/alfa-cli/package.json
@@ -22,27 +22,26 @@
     "bin/**/*.js",
     "bin/**/*.d.ts"
   ],
-  "oclif": {
-    "commands": "./bin/alfa/commands",
-    "bin": "alfa"
-  },
   "dependencies": {
-    "@oclif/command": "^1.5.19",
-    "@oclif/config": "^1.13.3",
-    "@oclif/errors": "^1.2.2",
-    "@oclif/parser": "^3.8.5",
-    "@oclif/plugin-help": "^2.2.1",
     "@siteimprove/alfa-act": "^0.2.0",
     "@siteimprove/alfa-cache": "^0.2.0",
     "@siteimprove/alfa-device": "^0.2.0",
     "@siteimprove/alfa-dom": "^0.2.0",
+    "@siteimprove/alfa-equatable": "^0.2.0",
     "@siteimprove/alfa-formatter": "^0.2.0",
     "@siteimprove/alfa-formatter-earl": "^0.2.0",
     "@siteimprove/alfa-formatter-json": "^0.2.0",
+    "@siteimprove/alfa-functor": "^0.2.0",
     "@siteimprove/alfa-future": "^0.2.0",
+    "@siteimprove/alfa-highlight": "^0.2.0",
     "@siteimprove/alfa-http": "^0.2.0",
     "@siteimprove/alfa-iterable": "^0.2.0",
+    "@siteimprove/alfa-json": "^0.2.0",
+    "@siteimprove/alfa-mapper": "^0.2.0",
     "@siteimprove/alfa-option": "^0.2.0",
+    "@siteimprove/alfa-parser": "^0.2.0",
+    "@siteimprove/alfa-record": "^0.2.0",
+    "@siteimprove/alfa-result": "^0.2.0",
     "@siteimprove/alfa-rules": "^0.2.0",
     "@siteimprove/alfa-scraper": "^0.2.0",
     "@siteimprove/alfa-sequence": "^0.2.0",
@@ -50,8 +49,7 @@
     "@siteimprove/alfa-web": "^0.2.0",
     "@siteimprove/alfa-xpath": "^0.2.0",
     "@types/node": "^14.0.12",
-    "enquirer": "^2.3.0",
-    "tempy": "^0.5.0"
+    "enquirer": "^2.3.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.2.0"
