Add missing reference

--- a/packages/alfa-cli/tsconfig.json
+++ b/packages/alfa-cli/tsconfig.json
@@ -25,6 +25,9 @@
       "path": "../alfa-cache"
     },
     {
+      "path": "../alfa-command"
+    },
+    {
       "path": "../alfa-device"
     },
     {
