--- a/packages/alfa-cli/package.json
+++ b/packages/alfa-cli/package.json
@@ -11,29 +11,17 @@
     "directory": "packages/alfa-cli"
   },
   "bugs": "https://github.com/siteimprove/alfa/issues",
-  "main": "src/index.js",
-  "types": "src/index.d.ts",
   "bin": {
     "alfa": "bin/alfa.js"
   },
   "files": [
-    "src/**/*.js",
-    "src/**/*.d.ts",
     "bin/**/*.js",
     "bin/**/*.d.ts"
   ],
-  "oclif": {
-    "commands": "./bin/alfa/commands",
-    "bin": "alfa"
-  },
   "dependencies": {
-    "@oclif/command": "^1.5.19",
-    "@oclif/config": "^1.13.3",
-    "@oclif/errors": "^1.2.2",
-    "@oclif/parser": "^3.8.5",
-    "@oclif/plugin-help": "^2.2.1",
     "@siteimprove/alfa-act": "^0.2.0",
     "@siteimprove/alfa-cache": "^0.2.0",
+    "@siteimprove/alfa-command": "^0.2.0",
     "@siteimprove/alfa-device": "^0.2.0",
     "@siteimprove/alfa-dom": "^0.2.0",
     "@siteimprove/alfa-formatter": "^0.2.0",
@@ -43,15 +31,14 @@
     "@siteimprove/alfa-http": "^0.2.0",
     "@siteimprove/alfa-iterable": "^0.2.0",
     "@siteimprove/alfa-option": "^0.2.0",
+    "@siteimprove/alfa-result": "^0.2.0",
     "@siteimprove/alfa-rules": "^0.2.0",
     "@siteimprove/alfa-scraper": "^0.2.0",
-    "@siteimprove/alfa-sequence": "^0.2.0",
     "@siteimprove/alfa-time": "^0.2.0",
     "@siteimprove/alfa-web": "^0.2.0",
     "@siteimprove/alfa-xpath": "^0.2.0",
     "@types/node": "^14.0.12",
-    "enquirer": "^2.3.0",
-    "tempy": "^0.5.0"
+    "enquirer": "^2.3.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.2.0"
