Add missing references

--- a/packages/alfa-affine/tsconfig.json
+++ b/packages/alfa-affine/tsconfig.json
@@ -8,6 +8,12 @@
   ],
   "references": [
     {
+      "path": "../alfa-equatable"
+    },
+    {
+      "path": "../alfa-json"
+    },
+    {
       "path": "../alfa-math"
     },
     {
