--- a/packages/alfa-affine/package.json
+++ b/packages/alfa-affine/package.json
@@ -18,6 +18,8 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-equatable": "^0.2.0",
+    "@siteimprove/alfa-json": "^0.2.0",
     "@siteimprove/alfa-math": "^0.2.0",
     "@siteimprove/alfa-option": "^0.2.0"
   },
