Move some table logic out of Cell.Builder

--- a/packages/alfa-cli/package.json
+++ b/packages/alfa-cli/package.json
@@ -46,5 +46,8 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://npm.pkg.github.com/"
+  },
+  "scripts": {
+    "test": "node script.js"
   }
 }
