Add HyperScript-like DSL for constructing DOM

--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -2,7 +2,9 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "files": [
+    "h.ts",
     "jsx.ts",
+    "src/h.ts",
     "src/index.ts",
     "src/jsx.ts",
     "src/namespace.ts",
