--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -20,7 +20,6 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
-    "@siteimprove/alfa-css": "^0.2.0",
     "@siteimprove/alfa-earl": "^0.2.0",
     "@siteimprove/alfa-equatable": "^0.2.0",
     "@siteimprove/alfa-iterable": "^0.2.0",
@@ -29,8 +28,7 @@
     "@siteimprove/alfa-mapper": "^0.2.0",
     "@siteimprove/alfa-option": "^0.2.0",
     "@siteimprove/alfa-predicate": "^0.2.0",
-    "@siteimprove/alfa-sequence": "^0.2.0",
-    "@siteimprove/alfa-slice": "^0.2.0"
+    "@siteimprove/alfa-sequence": "^0.2.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.2.0"
