Correctly resolve important and overriden CSS properties

--- a/packages/alfa-style/tsconfig.json
+++ b/packages/alfa-style/tsconfig.json
@@ -19,7 +19,8 @@
     "src/property/width.ts",
     "src/resolver.ts",
     "src/style.ts",
-    "src/value.ts"
+    "src/value.ts",
+    "test/style.spec.tsx"
   ],
   "references": [
     {
