--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -2,7 +2,9 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "files": [
+    "h.ts",
     "jsx.ts",
+    "src/h.ts",
     "src/index.ts",
     "src/jsx.ts",
     "src/namespace.ts",
@@ -40,9 +42,6 @@
   ],
   "references": [
     {
-      "path": "../alfa-css"
-    },
-    {
       "path": "../alfa-earl"
     },
     {
@@ -68,9 +67,6 @@
     },
     {
       "path": "../alfa-sequence"
-    },
-    {
-      "path": "../alfa-slice"
     },
     {
       "path": "../alfa-test"
