Create a GitHub release as part of release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,3 +19,12 @@ jobs:
       - run: yarn lerna publish --yes from-package
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          body: |
+            [Changelog for this release](CHANGELOG.md)
+          prerelease: true
