--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -28,7 +28,8 @@
     "@siteimprove/alfa-mapper": "^0.3.0",
     "@siteimprove/alfa-option": "^0.3.0",
     "@siteimprove/alfa-predicate": "^0.3.0",
-    "@siteimprove/alfa-sequence": "^0.3.0"
+    "@siteimprove/alfa-sequence": "^0.3.0",
+    "@siteimprove/alfa-trampoline": "^0.3.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.3.0"
