--- a/packages/alfa-angular/tsconfig.json
+++ b/packages/alfa-angular/tsconfig.json
@@ -1,18 +1,8 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": [
-    "chai.ts",
-    "jasmine.ts",
-    "jest.ts",
-    "src/angular.ts",
-    "src/index.ts",
-    "unexpected.ts"
-  ],
+  "files": ["src/angular.ts", "src/index.ts"],
   "references": [
-    {
-      "path": "../alfa-chai"
-    },
     {
       "path": "../alfa-device"
     },
@@ -20,25 +10,13 @@
       "path": "../alfa-dom"
     },
     {
-      "path": "../alfa-future"
-    },
-    {
       "path": "../alfa-http"
-    },
-    {
-      "path": "../alfa-jasmine"
-    },
-    {
-      "path": "../alfa-jest"
     },
     {
       "path": "../alfa-option"
     },
     {
       "path": "../alfa-test"
-    },
-    {
-      "path": "../alfa-unexpected"
     },
     {
       "path": "../alfa-web"
