--- a/packages/alfa-assert/tsconfig.json
+++ b/packages/alfa-assert/tsconfig.json
@@ -1,43 +1,35 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["src/assert.ts", "src/index.ts"],
+  "files": [
+    "src/asserter.ts",
+    "src/assertion.ts",
+    "src/handler.ts",
+    "src/index.ts",
+    "test/fixture/rule.ts",
+    "test/asserter.spec.ts"
+  ],
   "references": [
     {
       "path": "../alfa-act"
     },
     {
-      "path": "../alfa-dom"
+      "path": "../alfa-formatter"
     },
     {
-      "path": "../alfa-equatable"
+      "path": "../alfa-formatter-earl"
     },
     {
       "path": "../alfa-future"
     },
     {
-      "path": "../alfa-iterable"
+      "path": "../alfa-mapper"
     },
     {
-      "path": "../alfa-json"
-    },
-    {
-      "path": "../alfa-list"
-    },
-    {
-      "path": "../alfa-option"
-    },
-    {
-      "path": "../alfa-rules"
+      "path": "../alfa-result"
     },
     {
       "path": "../alfa-test"
-    },
-    {
-      "path": "../alfa-web"
-    },
-    {
-      "path": "../alfa-xpath"
     }
   ]
 }
