--- a/packages/alfa-chai/package.json
+++ b/packages/alfa-chai/package.json
@@ -14,19 +14,13 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "files": [
-    "*.js",
-    "*.d.ts",
     "src/**/*.js",
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-act": "^0.3.0",
     "@siteimprove/alfa-assert": "^0.3.0",
-    "@siteimprove/alfa-dom": "^0.3.0",
-    "@siteimprove/alfa-future": "^0.3.0",
-    "@siteimprove/alfa-iterable": "^0.3.0",
     "@siteimprove/alfa-mapper": "^0.3.0",
-    "@siteimprove/alfa-predicate": "^0.3.0",
-    "@siteimprove/alfa-web": "^0.3.0",
     "@types/chai": "^4.1.7",
     "chai": "^4.2.0"
   },
