--- a/packages/alfa-chai/tsconfig.json
+++ b/packages/alfa-chai/tsconfig.json
@@ -1,31 +1,19 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["plugin.ts", "src/chai.ts", "src/index.ts"],
+  "files": ["src/chai.ts", "src/index.ts"],
   "references": [
     {
+      "path": "../alfa-act"
+    },
+    {
       "path": "../alfa-assert"
-    },
-    {
-      "path": "../alfa-dom"
-    },
-    {
-      "path": "../alfa-future"
-    },
-    {
-      "path": "../alfa-iterable"
     },
     {
       "path": "../alfa-mapper"
     },
     {
-      "path": "../alfa-predicate"
-    },
-    {
       "path": "../alfa-test"
-    },
-    {
-      "path": "../alfa-web"
     }
   ]
 }
