--- a/packages/alfa-cypress/tsconfig.json
+++ b/packages/alfa-cypress/tsconfig.json
@@ -1,22 +1,13 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["chai.ts", "src/cypress.ts", "src/index.ts"],
+  "files": ["src/cypress.ts", "src/index.ts"],
   "references": [
-    {
-      "path": "../alfa-assert"
-    },
-    {
-      "path": "../alfa-chai"
-    },
     {
       "path": "../alfa-device"
     },
     {
       "path": "../alfa-dom"
-    },
-    {
-      "path": "../alfa-future"
     },
     {
       "path": "../alfa-http"
