--- a/packages/alfa-enzyme/package.json
+++ b/packages/alfa-enzyme/package.json
@@ -14,25 +14,16 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "files": [
-    "*.js",
-    "*.d.ts",
     "src/**/*.js",
     "src/**/*.d.ts"
   ],
   "dependencies": {
-    "@siteimprove/alfa-chai": "^0.3.0",
     "@siteimprove/alfa-cheerio": "^0.3.0",
     "@siteimprove/alfa-dom": "^0.3.0",
-    "@siteimprove/alfa-future": "^0.3.0",
-    "@siteimprove/alfa-jasmine": "^0.3.0",
-    "@siteimprove/alfa-jest": "^0.3.0",
     "@siteimprove/alfa-react": "^0.3.0",
-    "@siteimprove/alfa-unexpected": "^0.3.0",
     "@siteimprove/alfa-web": "^0.3.0",
     "@types/enzyme": "^3.1.18",
-    "@types/react": "^16.8.4",
-    "enzyme": "^3.7.0",
-    "react": "^16.8.2"
+    "enzyme": "^3.7.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.3.0"
