--- a/packages/alfa-jasmine/package.json
+++ b/packages/alfa-jasmine/package.json
@@ -14,15 +14,13 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "files": [
-    "*.js",
-    "*.d.ts",
     "src/**/*.js",
     "src/**/*.d.ts"
   ],
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.3.0",
+    "@siteimprove/alfa-future": "^0.3.0",
     "@siteimprove/alfa-mapper": "^0.3.0",
-    "@siteimprove/alfa-predicate": "^0.3.0",
     "@siteimprove/alfa-web": "^0.3.0",
     "@types/jasmine": "^3.3.12",
     "jasmine": "^3.4.0"
