--- a/packages/alfa-jest/package.json
+++ b/packages/alfa-jest/package.json
@@ -21,10 +21,8 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.3.0",
-    "@siteimprove/alfa-highlight": "^0.3.0",
+    "@siteimprove/alfa-future": "^0.3.0",
     "@siteimprove/alfa-mapper": "^0.3.0",
-    "@siteimprove/alfa-predicate": "^0.3.0",
-    "@siteimprove/alfa-sequence": "^0.3.0",
     "@siteimprove/alfa-web": "^0.3.0",
     "@types/jest": "^24.0.6",
     "jest": "^24.1.0"
