--- a/packages/alfa-jest/tsconfig.json
+++ b/packages/alfa-jest/tsconfig.json
@@ -1,22 +1,16 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["plugin.ts", "src/index.ts", "src/jest.ts"],
+  "files": ["src/index.ts", "src/jest.ts"],
   "references": [
     {
       "path": "../alfa-assert"
     },
     {
-      "path": "../alfa-highlight"
+      "path": "../alfa-future"
     },
     {
       "path": "../alfa-mapper"
-    },
-    {
-      "path": "../alfa-predicate"
-    },
-    {
-      "path": "../alfa-sequence"
     },
     {
       "path": "../alfa-test"
