--- a/packages/alfa-puppeteer/tsconfig.json
+++ b/packages/alfa-puppeteer/tsconfig.json
@@ -1,11 +1,8 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["chai.ts", "src/index.ts", "src/puppeteer.ts"],
+  "files": ["src/index.ts", "src/puppeteer.ts"],
   "references": [
-    {
-      "path": "../alfa-chai"
-    },
     {
       "path": "../alfa-device"
     },
@@ -13,16 +10,10 @@
       "path": "../alfa-dom"
     },
     {
-      "path": "../alfa-future"
-    },
-    {
       "path": "../alfa-http"
     },
     {
       "path": "../alfa-option"
-    },
-    {
-      "path": "../alfa-predicate"
     },
     {
       "path": "../alfa-test"
