--- a/packages/alfa-vue/tsconfig.json
+++ b/packages/alfa-vue/tsconfig.json
@@ -1,18 +1,8 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": [
-    "chai.ts",
-    "jasmine.ts",
-    "jest.ts",
-    "src/index.ts",
-    "src/vue.ts",
-    "unexpected.ts"
-  ],
+  "files": ["src/index.ts", "src/vue.ts"],
   "references": [
-    {
-      "path": "../alfa-chai"
-    },
     {
       "path": "../alfa-cheerio"
     },
@@ -23,28 +13,10 @@
       "path": "../alfa-dom"
     },
     {
-      "path": "../alfa-future"
-    },
-    {
       "path": "../alfa-http"
     },
     {
-      "path": "../alfa-jasmine"
-    },
-    {
-      "path": "../alfa-jest"
-    },
-    {
-      "path": "../alfa-option"
-    },
-    {
-      "path": "../alfa-predicate"
-    },
-    {
       "path": "../alfa-test"
-    },
-    {
-      "path": "../alfa-unexpected"
     },
     {
       "path": "../alfa-web"
