--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -38,6 +38,7 @@
     "src/style/rule/style.ts",
     "src/style/rule/supports.ts",
     "src/style/sheet.ts",
+    "test/h.spec.ts",
     "test/node/attribute.spec.ts"
   ],
   "references": [
