--- a/packages/alfa-scraper/tsconfig.json
+++ b/packages/alfa-scraper/tsconfig.json
@@ -6,7 +6,8 @@
     "src/credentials.ts",
     "src/index.ts",
     "src/scraper.ts",
-    "src/screenshot.ts"
+    "src/screenshot.ts",
+    "test/scraper.spec.ts"
   ],
   "references": [
     {
