--- a/packages/alfa-scraper/tsconfig.json
+++ b/packages/alfa-scraper/tsconfig.json
@@ -6,7 +6,8 @@
     "src/credentials.ts",
     "src/index.ts",
     "src/scraper.ts",
-    "src/screenshot.ts"
+    "src/screenshot.ts",
+    "test/scraper.spec.ts"
   ],
   "references": [
     {
@@ -14,9 +15,6 @@
     },
     {
       "path": "../alfa-dom"
-    },
-    {
-      "path": "../alfa-encoding"
     },
     {
       "path": "../alfa-equatable"
