Very basic handling of var()

--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -18,6 +18,7 @@
     "src/value/color/hsl.ts",
     "src/value/color/named.ts",
     "src/value/color/rgb.ts",
+    "src/value/color/var.ts",
     "src/value/color/system.ts",
     "src/value/converter.ts",
     "src/value/gradient.ts",
