--- a/packages/alfa-style/package.json
+++ b/packages/alfa-style/package.json
@@ -23,6 +23,7 @@
     "@siteimprove/alfa-css": "^0.3.0",
     "@siteimprove/alfa-device": "^0.3.0",
     "@siteimprove/alfa-dom": "^0.3.0",
+    "@siteimprove/alfa-either": "^0.3.0",
     "@siteimprove/alfa-equatable": "^0.3.0",
     "@siteimprove/alfa-functor": "^0.3.0",
     "@siteimprove/alfa-iterable": "^0.3.0",
