Don't laugh a billion times

--- a/packages/alfa-style/tsconfig.json
+++ b/packages/alfa-style/tsconfig.json
@@ -72,6 +72,9 @@
       "path": "../alfa-record"
     },
     {
+      "path": "../alfa-set"
+    },
+    {
       "path": "../alfa-slice"
     },
     {
