--- a/packages/alfa-style/package.json
+++ b/packages/alfa-style/package.json
@@ -34,6 +34,7 @@
     "@siteimprove/alfa-option": "^0.3.0",
     "@siteimprove/alfa-parser": "^0.3.0",
     "@siteimprove/alfa-record": "^0.3.0",
+    "@siteimprove/alfa-set": "^0.3.0",
     "@siteimprove/alfa-slice": "^0.3.0"
   },
   "devDependencies": {
