Implement support for ACT rule requirements and tags

--- a/packages/alfa-act/tsconfig.json
+++ b/packages/alfa-act/tsconfig.json
@@ -10,7 +10,9 @@
     "src/oracle.ts",
     "src/outcome.ts",
     "src/question.ts",
-    "src/rule.ts"
+    "src/requirement.ts",
+    "src/rule.ts",
+    "src/tag.ts"
   ],
   "references": [
     {
