--- a/packages/alfa-list/package.json
+++ b/packages/alfa-list/package.json
@@ -29,7 +29,8 @@
     "@siteimprove/alfa-mapper": "^0.3.0",
     "@siteimprove/alfa-option": "^0.3.0",
     "@siteimprove/alfa-predicate": "^0.3.0",
-    "@siteimprove/alfa-reducer": "^0.3.0"
+    "@siteimprove/alfa-reducer": "^0.3.0",
+    "@siteimprove/alfa-set": "^0.3.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.3.0"
