Add `Node` predicates

--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -11,6 +11,9 @@
     "src/node/container.ts",
     "src/node/element.ts",
     "src/node/inert.ts",
+    "src/node/predicate.ts",
+    "src/node/predicate/has-name.ts",
+    "src/node/predicate/has-role.ts",
     "src/node/text.ts",
     "src/role.ts",
     "src/role/data.ts",
