Progress on CSS values and `background-*` properties

--- a/packages/alfa-style/tsconfig.json
+++ b/packages/alfa-style/tsconfig.json
@@ -14,12 +14,14 @@
     "src/property/overflow.ts",
     "src/property/text.ts",
     "src/property/transform.ts",
+    "src/property/value/list.ts",
     "src/property/visibility.ts",
     "src/property/whitespace.ts",
     "src/property/width.ts",
     "src/resolver.ts",
     "src/style.ts",
     "src/value.ts",
+    "test/property/background.spec.tsx",
     "test/style.spec.tsx"
   ],
   "references": [
