--- a/packages/alfa-style/tsconfig.json
+++ b/packages/alfa-style/tsconfig.json
@@ -54,6 +54,9 @@
       "path": "../alfa-json"
     },
     {
+      "path": "../alfa-map"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
