Add missing file reference

--- a/packages/alfa-style/tsconfig.json
+++ b/packages/alfa-style/tsconfig.json
@@ -23,6 +23,7 @@
     "src/style.ts",
     "src/value.ts",
     "test/property/background.spec.tsx",
+    "test/property/combinator/any.spec.ts",
     "test/style.spec.tsx"
   ],
   "references": [
