Scrape data directly from WCAG

--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -1,7 +1,12 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["src/criterion.ts", "src/criterion/data.ts", "src/index.ts"],
+  "files": [
+    "src/conformance.ts",
+    "src/criterion.ts",
+    "src/criterion/data.ts",
+    "src/index.ts"
+  ],
   "references": [
     {
       "path": "../alfa-act"
