--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -7,6 +7,8 @@
     "src/feature.ts",
     "src/index.ts",
     "src/name.ts",
+    "src/name/predicate.ts",
+    "src/name/predicate/has-value.ts",
     "src/node.ts",
     "src/node/container.ts",
     "src/node/element.ts",
