--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -24,6 +24,7 @@
     "@siteimprove/alfa-device": "^0.3.0",
     "@siteimprove/alfa-dom": "^0.3.0",
     "@siteimprove/alfa-equatable": "^0.3.0",
+    "@siteimprove/alfa-hash": "^0.3.0",
     "@siteimprove/alfa-iterable": "^0.3.0",
     "@siteimprove/alfa-json": "^0.3.0",
     "@siteimprove/alfa-lazy": "^0.3.0",
@@ -34,7 +35,8 @@
     "@siteimprove/alfa-sequence": "^0.3.0",
     "@siteimprove/alfa-set": "^0.3.0",
     "@siteimprove/alfa-style": "^0.3.0",
-    "@siteimprove/alfa-table": "^0.3.0"
+    "@siteimprove/alfa-table": "^0.3.0",
+    "@siteimprove/alfa-thunk": "^0.3.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.3.0"
