--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -44,6 +44,9 @@
       "path": "../alfa-equatable"
     },
     {
+      "path": "../alfa-hash"
+    },
+    {
       "path": "../alfa-iterable"
     },
     {
@@ -78,6 +81,9 @@
     },
     {
       "path": "../alfa-test"
+    },
+    {
+      "path": "../alfa-thunk"
     }
   ]
 }
