Add missing dependency

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -232,6 +232,9 @@
       "path": "../alfa-trilean"
     },
     {
+      "path": "../alfa-wcag"
+    },
+    {
       "path": "../alfa-web"
     }
   ]
