--- a/packages/alfa-rules/package.json
+++ b/packages/alfa-rules/package.json
@@ -47,6 +47,7 @@
     "@siteimprove/alfa-table": "^0.3.0",
     "@siteimprove/alfa-thunk": "^0.3.0",
     "@siteimprove/alfa-trilean": "^0.3.0",
+    "@siteimprove/alfa-wcag": "^0.3.1",
     "@siteimprove/alfa-web": "^0.3.0"
   },
   "devDependencies": {
