Pull in WCAG 2.0, 2.1, and 2.2 data

--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -12,6 +12,12 @@
       "path": "../alfa-act"
     },
     {
+      "path": "../alfa-branched"
+    },
+    {
+      "path": "../alfa-predicate"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
