--- a/packages/alfa-wcag/package.json
+++ b/packages/alfa-wcag/package.json
@@ -21,7 +21,9 @@
     "generate": "node scripts/criteria.js"
   },
   "dependencies": {
-    "@siteimprove/alfa-act": "^0.3.0"
+    "@siteimprove/alfa-act": "^0.3.0",
+    "@siteimprove/alfa-branched": "^0.3.0",
+    "@siteimprove/alfa-predicate": "^0.3.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.3.0"
