Changes per feedback

--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -17,6 +17,9 @@
     "src/**/*.js",
     "src/**/*.d.ts"
   ],
+  "scripts": {
+    "generate": "node scripts/attributes.js && node scripts/roles.js"
+  },
   "dependencies": {
     "@siteimprove/alfa-branched": "^0.3.0",
     "@siteimprove/alfa-cache": "^0.3.0",
