Pull in WCAG techniques

--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -5,7 +5,9 @@
     "src/conformance.ts",
     "src/criterion.ts",
     "src/criterion/data.ts",
-    "src/index.ts"
+    "src/index.ts",
+    "src/technique.ts",
+    "src/technique/data.ts"
   ],
   "references": [
     {
