--- a/packages/alfa-wcag/package.json
+++ b/packages/alfa-wcag/package.json
@@ -18,7 +18,7 @@
     "src/**/*.d.ts"
   ],
   "scripts": {
-    "generate": "node scripts/criteria.js"
+    "generate": "node scripts/criteria.js && node scripts/techniques.js"
   },
   "dependencies": {
     "@siteimprove/alfa-act": "^0.3.0",
