Progress on An+B selector syntax

--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -9,6 +9,7 @@
     "src/syntax/declaration.ts",
     "src/syntax/function.ts",
     "src/syntax/lexer.ts",
+    "src/syntax/nth.ts",
     "src/syntax/token.ts",
     "src/value.ts",
     "src/value/angle.ts",
