Add test cases for `Nth`

--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -42,7 +42,8 @@
     "src/value/unit.ts",
     "src/value/url.ts",
     "test/syntax/declaration.spec.ts",
-    "test/syntax/lexer.spec.ts"
+    "test/syntax/lexer.spec.ts",
+    "test/syntax/nth.spec.ts"
   ],
   "references": [
     {
