--- a/packages/alfa-record/tsconfig.json
+++ b/packages/alfa-record/tsconfig.json
@@ -22,6 +22,9 @@
       "path": "../alfa-option"
     },
     {
+      "path": "../alfa-predicate"
+    },
+    {
       "path": "../alfa-reducer"
     },
     {
