--- a/packages/alfa-css/package.json
+++ b/packages/alfa-css/package.json
@@ -23,10 +23,12 @@
     "@siteimprove/alfa-hash": "^0.4.0",
     "@siteimprove/alfa-iterable": "^0.4.0",
     "@siteimprove/alfa-json": "^0.4.0",
+    "@siteimprove/alfa-mapper": "^0.4.0",
     "@siteimprove/alfa-math": "^0.4.0",
     "@siteimprove/alfa-option": "^0.4.0",
     "@siteimprove/alfa-parser": "^0.4.1",
     "@siteimprove/alfa-predicate": "^0.4.0",
+    "@siteimprove/alfa-record": "^0.4.0",
     "@siteimprove/alfa-result": "^0.4.0",
     "@siteimprove/alfa-slice": "^0.4.0",
     "@siteimprove/alfa-thunk": "^0.4.0"
