--- a/packages/alfa-record/package.json
+++ b/packages/alfa-record/package.json
@@ -24,6 +24,7 @@
     "@siteimprove/alfa-json": "^0.4.0",
     "@siteimprove/alfa-list": "^0.4.0",
     "@siteimprove/alfa-option": "^0.4.0",
+    "@siteimprove/alfa-predicate": "^0.4.0",
     "@siteimprove/alfa-reducer": "^0.4.0"
   },
   "devDependencies": {
