Implement support for `calc()` expressions (#376)

--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -13,6 +13,7 @@
     "src/syntax/token.ts",
     "src/value.ts",
     "src/value/angle.ts",
+    "src/value/calculation.ts",
     "src/value/color.ts",
     "src/value/color/current.ts",
     "src/value/color/hex.ts",
@@ -21,6 +22,7 @@
     "src/value/color/rgb.ts",
     "src/value/color/system.ts",
     "src/value/converter.ts",
+    "src/value/dimension.ts",
     "src/value/gradient.ts",
     "src/value/gradient/linear.ts",
     "src/value/image.ts",
@@ -43,7 +45,8 @@
     "src/value/url.ts",
     "test/syntax/declaration.spec.ts",
     "test/syntax/lexer.spec.ts",
-    "test/syntax/nth.spec.ts"
+    "test/syntax/nth.spec.ts",
+    "test/value/calculation.spec.ts"
   ],
   "references": [
     {
@@ -62,6 +65,9 @@
       "path": "../alfa-json"
     },
     {
+      "path": "../alfa-mapper"
+    },
+    {
       "path": "../alfa-math"
     },
     {
@@ -72,6 +78,9 @@
     },
     {
       "path": "../alfa-predicate"
+    },
+    {
+      "path": "../alfa-record"
     },
     {
       "path": "../alfa-result"
