--- a/packages/alfa-media/tsconfig.json
+++ b/packages/alfa-media/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["src/index.ts", "src/media.ts"],
+  "files": ["src/index.ts", "src/media.ts", "src/resolver.ts"],
   "references": [
     {
       "path": "../alfa-css"
