Remnove structural equality test

--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -42,8 +42,7 @@
     "src/style/rule/supports.ts",
     "src/style/sheet.ts",
     "test/h.spec.ts",
-    "test/node/attribute.spec.ts",
-    "test/node/document.spec.tsx"
+    "test/node/attribute.spec.ts"
   ],
   "references": [
     {
