--- a/packages/alfa-command/tsconfig.json
+++ b/packages/alfa-command/tsconfig.json
@@ -33,6 +33,9 @@
       "path": "../alfa-predicate"
     },
     {
+      "path": "../alfa-refinement"
+    },
+    {
       "path": "../alfa-result"
     },
     {
