--- a/packages/alfa-hash/tsconfig.json
+++ b/packages/alfa-hash/tsconfig.json
@@ -12,7 +12,7 @@
       "path": "../alfa-encoding"
     },
     {
-      "path": "../alfa-predicate"
+      "path": "../alfa-refinement"
     },
     {
       "path": "../alfa-test"
