--- a/packages/alfa-json/tsconfig.json
+++ b/packages/alfa-json/tsconfig.json
@@ -4,7 +4,7 @@
   "files": ["src/index.ts", "src/json.ts", "src/serializable.ts"],
   "references": [
     {
-      "path": "../alfa-predicate"
+      "path": "../alfa-refinement"
     },
     {
       "path": "../alfa-test"
