--- a/packages/alfa-option/tsconfig.json
+++ b/packages/alfa-option/tsconfig.json
@@ -40,6 +40,9 @@
       "path": "../alfa-reducer"
     },
     {
+      "path": "../alfa-predicate"
+    },
+    {
       "path": "../alfa-test"
     },
     {
