--- a/packages/alfa-collection/tsconfig.json
+++ b/packages/alfa-collection/tsconfig.json
@@ -40,6 +40,9 @@
       "path": "../alfa-reducer"
     },
     {
+      "path": "../alfa-refinement"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
