--- a/packages/alfa-http/tsconfig.json
+++ b/packages/alfa-http/tsconfig.json
@@ -34,7 +34,7 @@
       "path": "../alfa-option"
     },
     {
-      "path": "../alfa-predicate"
+      "path": "../alfa-refinement"
     },
     {
       "path": "../alfa-test"
