--- a/packages/alfa-iterable/tsconfig.json
+++ b/packages/alfa-iterable/tsconfig.json
@@ -19,6 +19,9 @@
       "path": "../alfa-reducer"
     },
     {
+      "path": "../alfa-refinement"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
