--- a/packages/alfa-map/tsconfig.json
+++ b/packages/alfa-map/tsconfig.json
@@ -46,6 +46,9 @@
       "path": "../alfa-reducer"
     },
     {
+      "path": "../alfa-refinement"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
