--- a/packages/alfa-option/package.json
+++ b/packages/alfa-option/package.json
@@ -28,6 +28,7 @@
     "@siteimprove/alfa-monad": "^0.5.0",
     "@siteimprove/alfa-predicate": "^0.5.0",
     "@siteimprove/alfa-reducer": "^0.5.0",
+    "@siteimprove/alfa-refinement": "^0.5.0",
     "@siteimprove/alfa-thunk": "^0.5.0"
   },
   "devDependencies": {
