--- a/packages/alfa-parser/package.json
+++ b/packages/alfa-parser/package.json
@@ -23,6 +23,7 @@
     "@siteimprove/alfa-option": "^0.5.0",
     "@siteimprove/alfa-predicate": "^0.5.0",
     "@siteimprove/alfa-result": "^0.5.0",
+    "@siteimprove/alfa-refinement": "^0.5.0",
     "@siteimprove/alfa-thunk": "^0.5.0"
   },
   "devDependencies": {
