--- a/packages/alfa-parser/tsconfig.json
+++ b/packages/alfa-parser/tsconfig.json
@@ -19,6 +19,9 @@
       "path": "../alfa-result"
     },
     {
+      "path": "../alfa-refinement"
+    },
+    {
       "path": "../alfa-test"
     },
     {
