--- a/packages/alfa-refinement/package.json
+++ b/packages/alfa-refinement/package.json
@@ -1,14 +1,14 @@
 {
   "$schema": "http://json.schemastore.org/package",
-  "name": "@siteimprove/alfa-hash",
+  "name": "@siteimprove/alfa-refinement",
   "homepage": "https://siteimprove.com",
   "version": "0.5.0",
   "license": "MIT",
-  "description": "Types for modelling structures that support hashing",
+  "description": "Functionality for working with first-order type predicates",
   "repository": {
     "type": "git",
     "url": "https://github.com/siteimprove/alfa.git",
-    "directory": "packages/alfa-hash"
+    "directory": "packages/alfa-refinement"
   },
   "bugs": "https://github.com/siteimprove/alfa/issues",
   "main": "src/index.js",
@@ -18,8 +18,8 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
-    "@siteimprove/alfa-encoding": "^0.5.0",
-    "@siteimprove/alfa-refinement": "^0.5.0"
+    "@siteimprove/alfa-equatable": "^0.5.0",
+    "@siteimprove/alfa-mapper": "^0.5.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.5.0"
