--- a/packages/alfa-set/package.json
+++ b/packages/alfa-set/package.json
@@ -26,7 +26,8 @@
     "@siteimprove/alfa-mapper": "^0.5.0",
     "@siteimprove/alfa-option": "^0.5.0",
     "@siteimprove/alfa-predicate": "^0.5.0",
-    "@siteimprove/alfa-reducer": "^0.5.0"
+    "@siteimprove/alfa-reducer": "^0.5.0",
+    "@siteimprove/alfa-refinement": "^0.5.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.5.0"
