--- a/packages/alfa-set/tsconfig.json
+++ b/packages/alfa-set/tsconfig.json
@@ -31,6 +31,9 @@
       "path": "../alfa-reducer"
     },
     {
+      "path": "../alfa-refinement"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
