Make CSS compile

--- a/packages/alfa-refinement/tsconfig.json
+++ b/packages/alfa-refinement/tsconfig.json
@@ -10,6 +10,9 @@
       "path": "../alfa-mapper"
     },
     {
+      "path": "../alfa-predicate"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
