--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -83,6 +83,9 @@
       "path": "../alfa-record"
     },
     {
+      "path": "../alfa-refinement"
+    },
+    {
       "path": "../alfa-result"
     },
     {
