--- a/packages/alfa-css/package.json
+++ b/packages/alfa-css/package.json
@@ -29,6 +29,7 @@
     "@siteimprove/alfa-parser": "^0.5.0",
     "@siteimprove/alfa-predicate": "^0.5.0",
     "@siteimprove/alfa-record": "^0.5.0",
+    "@siteimprove/alfa-refinement": "^0.5.0",
     "@siteimprove/alfa-result": "^0.5.0",
     "@siteimprove/alfa-slice": "^0.5.0",
     "@siteimprove/alfa-thunk": "^0.5.0"
