--- a/packages/alfa-refinement/package.json
+++ b/packages/alfa-refinement/package.json
@@ -19,7 +19,8 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-equatable": "^0.5.0",
-    "@siteimprove/alfa-mapper": "^0.5.0"
+    "@siteimprove/alfa-mapper": "^0.5.0",
+    "@siteimprove/alfa-predicate": "^0.5.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.5.0"
