Add missing package reference

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -68,6 +68,7 @@
     { "path": "alfa-react" },
     { "path": "alfa-record" },
     { "path": "alfa-reducer" },
+    { "path": "alfa-refinement" },
     { "path": "alfa-result" },
     { "path": "alfa-rules" },
     { "path": "alfa-scraper" },
